data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4169.wast
;; 8. **Test Description**:    Out-of-Bounds Function Reference Within Loop:    - Constraint: Check out-of-bounds function reference handling by `call_indirect` in a loop.    - Test Behavior: Execute a loop where `call_indirect` references a function beyond the bounds of the designated table, resulting in a trap.

(assert_invalid
  (module
    (type (func))
    (table 1 funcref)
    (func
      (local i32)
      (loop 
        (i32.const 2)
        (call_indirect (type 0) (i32.const 2))
        (br 0)
      )
    )
  )
  "index out of bounds"
)